--- a/assets/scss/pages/strategy.scss
+++ b/assets/scss/pages/strategy.scss
@@ -3,3 +3,20 @@
 body {
   background-color: $strategy-bg;
 }
+
+main {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.title {
+  font-size: 20pt;
+  font-weight: bold;
+}
+
+.subtitle {
+  color: #292929;
+  font-size: 9pt;
+  font-weight: bold;
+  border-bottom: 1px solid #5a8fa6;
+}
