--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -1,3 +1,31 @@
+body {
+  background: #787878;
+  width: 1290px; }
+  body .header-nav {
+    height: 150px;
+    width: 100%;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto; }
+    body .header-nav .text-header p {
+      font-weight: bold;
+      font-size: 4.5em; }
+  body main {
+    width: 100%; }
+  body .main-page {
+    background: url("../../img/home/axa_hopwork_070.jpg") no-repeat;
+    background-size: contain; }
 
+@media (min-width: 640px) {
+  .burger-menu {
+    background: url("../../img/common/Hamburger_menu.png") no-repeat;
+    width: 100px;
+    height: 100px;
+    background-size: contain; }
+
+  .hidden-text-header {
+    display: none; } }
 
 /*# sourceMappingURL=index.css.map */
