--- a/assets/css/pages/strategy.css
+++ b/assets/css/pages/strategy.css
@@ -3,7 +3,8 @@ body {
 
 main {
   max-width: 960px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: 1em; }
 
 .title {
   font-size: 20pt;
@@ -13,6 +14,34 @@ main {
   color: #292929;
   font-size: 9pt;
   font-weight: bold;
-  border-bottom: 1px solid #5a8fa6; }
+  border-bottom: 1px solid #5a8fa6;
+  margin-top: 2em; }
+
+.subtitle-icon {
+  display: flex;
+  align-items: center;
+  margin: 0 0.5em; }
+
+.pilliers, .priority {
+  display: flex;
+  justify-content: space-between;
+  margin: 1em;
+  align-items: center;
+  flex-direction: row; }
+
+.pilliers button {
+  background: inherit;
+  border: none;
+  cursor: pointer; }
+
+.pilliers button:focus {
+  outline: none; }
+
+.priority {
+  color: #636363; }
+
+/**************************************************************************\
+                  MEDIA QUERIES
+\**************************************************************************/
 
 /*# sourceMappingURL=strategy.css.map */
