--- a/assets/scss/pages/strategy.scss
+++ b/assets/scss/pages/strategy.scss
@@ -7,6 +7,7 @@ body {
 main {
   max-width: 960px;
   margin: 0 auto;
+  padding: 1em;
 }
 
 .title {
@@ -19,4 +20,66 @@ main {
   font-size: 9pt;
   font-weight: bold;
   border-bottom: 1px solid #5a8fa6;
+  margin-top: 2em;
+}
+
+.subtitle-icon {
+  display: flex;
+  align-items: center;
+  margin: 0 0.5em;
+}
+
+.pilliers, .priority {
+  display: flex;
+  justify-content: space-between;
+  margin: 1em;
+  align-items: center;
+  flex-direction: row;
+}
+
+.pilliers button {
+  background: inherit;
+  border: none;
+  cursor: pointer;
+}
+
+.pilliers button:focus {
+  outline: none;
+}
+
+.priority {
+  color: #636363;
+}
+
+
+/**************************************************************************\
+                  MEDIA QUERIES
+\**************************************************************************/
+
+@media screen and (max-width : 580px) {
+  
+}
+
+@media screen and (min-width : 581px) and (max-width : 700px) {
+
+}
+
+@media screen and (min-width : 701px) and (max-width : 820px) {
+
+}
+
+@media screen and (min-width : 821px) and (max-width : 940px) {
+
+}
+
+@media screen and (min-width : 941px) and (max-width : 1060px) {
+
+}
+
+@media screen and (min-width : 1061px) and (max-width : 1180px) {
+
+}
+
+@media screen and (min-width : 1181px) {
+
 }
