--- a/assets/css/pages/strategy.css
+++ b/assets/css/pages/strategy.css
@@ -8,9 +8,9 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    flex-direction: row;
-    flex-wrap: no-wrap;
     text-align: center; }
+    main section div img {
+      margin-top: 0.3em; }
     main section div figure {
       line-height: 1.5em; }
       main section div figure figcaption {
@@ -20,7 +20,7 @@ main {
     align-items: center;
     justify-content: flex-start;
     flex-direction: row;
-    flex-wrap: no-wrap; }
+    flex-wrap: wrap; }
     main section div.infos p {
       margin-left: 1em; }
       main section div.infos p span {
@@ -28,7 +28,7 @@ main {
 
 .title {
   text-align: center;
-  font-size: 20pt;
+  font-size: 20px;
   font-weight: bold; }
 
 .subtitle {
@@ -36,14 +36,6 @@ main {
   font-size: 9pt;
   font-weight: bold;
   border-bottom: 1px solid #5a8fa6; }
-
-.pilliers button {
-  background: inherit;
-  border: none;
-  cursor: pointer; }
-
-.pilliers button:focus {
-  outline: none; }
 
 /**************************************************************************\
                   MEDIA QUERIES
@@ -53,7 +45,6 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    flex-direction: column;
     flex-wrap: wrap; }
     main section div figure {
       margin: 0.5em;
