--- a/assets/scss/pages/strategy.scss
+++ b/assets/scss/pages/strategy.scss
@@ -10,9 +10,11 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    flex-direction: row;
-    flex-wrap: no-wrap;
     text-align: center;
+
+    img {
+      margin-top: 0.3em;
+    }
 
     figure {
       line-height: 1.5em;
@@ -28,8 +30,7 @@ main {
     align-items: center;
     justify-content: flex-start;
     flex-direction: row;
-    flex-wrap: no-wrap;
-
+    flex-wrap: wrap;
     p {
       margin-left: 1em;
 
@@ -44,7 +45,7 @@ main {
 
 .title {
   text-align: center;
-  font-size: 20pt;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -53,17 +54,6 @@ main {
   font-size: 9pt;
   font-weight: bold;
   border-bottom: 1px solid #5a8fa6;
-}
-
-
-.pilliers button {
-  background: inherit;
-  border: none;
-  cursor: pointer;
-}
-
-.pilliers button:focus {
-  outline: none;
 }
 
 /**************************************************************************\
@@ -77,7 +67,7 @@ main {
       display: flex;
       align-items: center;
       justify-content: space-around;
-      flex-direction: column;
+      // flex-direction: row;
       flex-wrap: wrap;
 
       figure {
@@ -106,6 +96,9 @@ main {
     }
   }
 }
+
+
+
 
 @media screen and (min-width : 581px) and (max-width : 700px) {
 
