--- a/assets/scss/pages/document.scss
+++ b/assets/scss/pages/document.scss
@@ -58,24 +58,35 @@ h2 {
 .Rapport p > span {
   font-weight: bold; }
 
+
+.listeDownload li > .hexagon,  {
+  float:right;
+  margin-left: 14px;
+}
+
 .listeDownload li {
   list-style: none;
   display: block;
   padding: 12px;
   background-color: #fff;
   margin-bottom: 3px;
-  font-weight: bold; }
+  font-weight: bold;
 
-.listeDownload li > span, .listeDownload li > input {
-  float: right; }
+  > span,
+  > input {
+      float: right;
+  }
 
-.listeDownload li > span {
-  font-size: 12px;
-  line-height: 1.2; }
+  > span {
+    font-size: 12px;
+    line-height: 1.2;
+  }
+}
+
+
 
 .btnSubmit .hexagon {
     display: inline-block;
-    
     margin-right: 12px
   }
 
@@ -85,9 +96,11 @@ h2 {
 
 .sous-menu {
   display: block;
-  position: relaive;
-  margin-top: 2px;
-  background-color: #f8f8f8 !important; }
+  position: relative;
+  margin-top: 13px;
+  margin-bottom: -13px;
+  margin-right: -13px;
+  background-color: #f8f8f8 }
 
 .deroulant .sous-menu li:after {
   content: ""; }
@@ -100,7 +113,21 @@ h2 {
 .deroulant .sous-menu li > a {
   color: white; }
 
+.deroulant .sous-menu li > .hexagon-little{
+  margin-left: 18px;
+  margin-right: 3px;
+  float: right;
+}
+
 /*****/
+.Rapport form {
+  &:after {
+    clear: both;
+    content: "";
+    display: table;
+  }
+}
+
 .Rapport button {
   color: #e79655;
   font-size: 14px;
@@ -196,13 +223,13 @@ h2 {
 }
 
 .AutresDocs .hexagon, .btnSubmit .hexagon {
-
    background: url(../../img/document/arrows.png) no-repeat;
    margin-left: 12px;
+   background-size: 9px;
    background-position: 50% 50%;
 }
 
-/** polygone **/
+/**  Grand hexagon **/
 
 .hexagon {
   position: relative;
@@ -210,10 +237,6 @@ h2 {
   height: 13.28px;
   border-left: solid 1px #e79655;
   border-right: solid 1px #e79655;
-}
-
-.hexagon span {
-
 }
 
 .hexagon:before,
@@ -245,6 +268,44 @@ h2 {
 
 .box-check {
   display: none
+}
+
+
+/** Petit hexagon **/
+
+.hexagon-little {
+  position: relative;
+  width: 16px;
+  height: 9.24px;
+  background-color: #f8f8f8;
+  border-left: solid 1px #e79655;
+  border-right: solid 1px #e79655;
+}
+
+.hexagon-little:before,
+.hexagon-little:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  width: 11.31px;
+  height: 11.31px;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background-color: inherit;
+  left: 1.3431px;
+}
+
+.hexagon-little:before {
+  top: -5.6569px;
+  border-top: solid 1.4142px #e79655;
+  border-right: solid 1.4142px #e79655;
+}
+
+.hexagon-little:after {
+  bottom: -5.6569px;
+  border-bottom: solid 1.4142px #e79655;
+  border-left: solid 1.4142px #e79655;
 }
 
 /* Mode responsive **/
