--- a/assets/css/pages/strategy.css
+++ b/assets/css/pages/strategy.css
@@ -9,8 +9,6 @@ main {
     align-items: center;
     justify-content: space-around;
     text-align: center; }
-    main section div img {
-      margin-top: 0.3em; }
     main section div figure {
       line-height: 1.5em; }
       main section div figure figcaption {
@@ -20,7 +18,8 @@ main {
     align-items: center;
     justify-content: flex-start;
     flex-direction: row;
-    flex-wrap: wrap; }
+    flex-wrap: wrap;
+    cursor: pointer; }
     main section div.infos p {
       margin-left: 1em; }
       main section div.infos p span {
@@ -28,19 +27,25 @@ main {
 
 .title {
   text-align: center;
-  font-size: 20px;
+  font-size: 40px;
   font-weight: bold; }
 
 .subtitle {
   color: #292929;
-  font-size: 9pt;
+  font-size: 15px;
   font-weight: bold;
   border-bottom: 1px solid #5a8fa6; }
+
+.hexagon.hexagon-pillier-1 {
+  background: #5a8fa6; }
 
 /**************************************************************************\
                   MEDIA QUERIES
 \**************************************************************************/
 @media screen and (max-width: 580px) {
+  .title {
+    font-size: 20px; }
+
   main section div {
     display: flex;
     align-items: center;
@@ -49,7 +54,7 @@ main {
     main section div figure {
       margin: 0.5em;
       text-align: center;
-      font-size: 10pt;
+      font-size: 10px;
       line-height: 1.3em; }
   main section div.infos {
     display: flex;
@@ -58,9 +63,14 @@ main {
     flex-direction: row;
     flex-wrap: wrap; }
     main section div.infos p {
-      font-size: 10pt;
+      font-size: 5px;
       margin-left: 1em; }
       main section div.infos p span {
         color: #636363; } }
+.polygone {
+  fill: #5a8fa6;
+  stroke: #fff;
+  stroke-width: 1px;
+  fill-rule: evenodd; }
 
 /*# sourceMappingURL=strategy.css.map */
