--- a/assets/css/pages/document.css
+++ b/assets/css/pages/document.css
@@ -59,13 +59,20 @@ h2 {
   font-weight: bold; }
 
 .listeDownload li > .hexagon {
-  float: right;
-  margin-left: 14px; }
+  margin-left: 7px;
+  margin-top: -3px;
+  float: right; }
+
+.listeDownload li > .hexagon > .check {
+  border: 1px solid red;
+  /*  background: url(../../img/document/check.png) no-repeat;
+    background-size: 16px;
+    background-position: 50% 50%;*/ }
 
 .listeDownload li {
   list-style: none;
   display: block;
-  padding: 12px;
+  padding: 16px;
   background-color: #fff;
   margin-bottom: 3px;
   font-weight: bold; }
@@ -88,8 +95,8 @@ h2 {
   display: block;
   position: relative;
   margin-top: 13px;
-  margin-bottom: -13px;
-  margin-right: -13px;
+  margin-bottom: -17px;
+  margin-right: -17px;
   background-color: #f8f8f8; }
 
 .deroulant .sous-menu li:after {
@@ -142,8 +149,9 @@ h2 {
   font-weight: bold; }
 
 .Publication li {
-  display: flex;
-  list-style: none; }
+  display: inline-block;
+  list-style: none;
+  width: 50%; }
 
 .Publication h4 {
   font-weight: bold;
@@ -179,7 +187,7 @@ h2 {
 .AutresDocs li {
   list-style: none;
   display: block;
-  padding: 12px;
+  padding: 16px;
   background-color: #fff;
   margin-bottom: 2px;
   font-weight: bold; }
@@ -193,21 +201,59 @@ h2 {
   float: right; }
 
 .AutresDocs .hexagon, .btnSubmit .hexagon {
-  background: url(../../img/document/arrows.png) no-repeat;
+  background: url() no-repeat;
   margin-left: 12px;
   background-size: 9px;
   background-position: 50% 50%; }
 
-/**  Grand hexagon **/
+.AutresDocs .hexagon span {
+  margin-left: 10px; }
+
+/**  Grand hexagon */
 .hexagon {
   position: relative;
-  width: 23px;
-  height: 13.28px;
+  width: 30px;
+  height: 17.32px;
+  background-color: #ffffff;
+  margin: 8.66px 0;
   border-left: solid 1px #e79655;
   border-right: solid 1px #e79655; }
 
 .hexagon:before,
 .hexagon:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  width: 21.21px;
+  height: 21.21px;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background-color: inherit;
+  left: 3.3934px; }
+
+.hexagon:before {
+  top: -10.6066px;
+  border-top: solid 1.4142px #e79655;
+  border-right: solid 1.4142px #e79655; }
+
+.hexagon:after {
+  bottom: -10.6066px;
+  border-bottom: solid 1.4142px #e79655;
+  border-left: solid 1.4142px #e79655; }
+
+/** Petit hexagon **/
+.hexagon-little {
+  position: relative;
+  width: 23px;
+  height: 13.28px;
+  background-color: #f8f8f8;
+  margin: 6.64px 0;
+  border-left: solid 1px #e79655;
+  border-right: solid 1px #e79655; }
+
+.hexagon-little:before,
+.hexagon-little:after {
   content: "";
   position: absolute;
   z-index: 1;
@@ -219,48 +265,13 @@ h2 {
   background-color: inherit;
   left: 2.3683px; }
 
-.hexagon:before {
+.hexagon-little:before {
   top: -8.1317px;
   border-top: solid 1.4142px #e79655;
   border-right: solid 1.4142px #e79655; }
 
-.hexagon:after {
+.hexagon-little:after {
   bottom: -8.1317px;
-  border-bottom: solid 1.4142px #e79655;
-  border-left: solid 1.4142px #e79655; }
-
-.box-check {
-  display: none; }
-
-/** Petit hexagon **/
-.hexagon-little {
-  position: relative;
-  width: 16px;
-  height: 9.24px;
-  background-color: #f8f8f8;
-  border-left: solid 1px #e79655;
-  border-right: solid 1px #e79655; }
-
-.hexagon-little:before,
-.hexagon-little:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  width: 11.31px;
-  height: 11.31px;
-  -webkit-transform: scaleY(0.5774) rotate(-45deg);
-  -ms-transform: scaleY(0.5774) rotate(-45deg);
-  transform: scaleY(0.5774) rotate(-45deg);
-  background-color: inherit;
-  left: 1.3431px; }
-
-.hexagon-little:before {
-  top: -5.6569px;
-  border-top: solid 1.4142px #e79655;
-  border-right: solid 1.4142px #e79655; }
-
-.hexagon-little:after {
-  bottom: -5.6569px;
   border-bottom: solid 1.4142px #e79655;
   border-left: solid 1.4142px #e79655; }
 
