--- a/assets/scss/pages/document.scss
+++ b/assets/scss/pages/document.scss
@@ -59,15 +59,23 @@ h2 {
   font-weight: bold; }
 
 
-.listeDownload li > .hexagon,  {
-  float:right;
-  margin-left: 14px;
+.listeDownload li > .hexagon {
+  margin-left: 7px;
+  margin-top: -3px;
+  float: right;
+}
+
+.listeDownload li > .hexagon > .check {
+  border: 1px solid red;
+/*  background: url(../../img/document/check.png) no-repeat;
+  background-size: 16px;
+  background-position: 50% 50%;*/
 }
 
 .listeDownload li {
   list-style: none;
   display: block;
-  padding: 12px;
+  padding: 16px;
   background-color: #fff;
   margin-bottom: 3px;
   font-weight: bold;
@@ -98,8 +106,8 @@ h2 {
   display: block;
   position: relative;
   margin-top: 13px;
-  margin-bottom: -13px;
-  margin-right: -13px;
+  margin-bottom: -17px;
+  margin-right: -17px;
   background-color: #f8f8f8 }
 
 .deroulant .sous-menu li:after {
@@ -143,7 +151,8 @@ h2 {
   margin-bottom: 12px; }
 
 .Rapport button > span {
-  font-weight: lighter; }
+  font-weight: lighter;
+}
 
 /*** Publication */
 .Publication {
@@ -158,9 +167,9 @@ h2 {
 }
 
 .Publication li {
-  display: flex;
+  display: inline-block;;
   list-style: none;
-
+  width: 50%;
    }
 
 .Publication h4 {
@@ -204,7 +213,7 @@ h2 {
 .AutresDocs li {
   list-style: none;
   display: block;
-  padding: 12px;
+  padding: 16px;
   background-color: #fff;
   margin-bottom: 2px;
   font-weight: bold;
@@ -223,24 +232,67 @@ h2 {
 }
 
 .AutresDocs .hexagon, .btnSubmit .hexagon {
-   background: url(../../img/document/arrows.png) no-repeat;
+   background: url() no-repeat;
    margin-left: 12px;
    background-size: 9px;
    background-position: 50% 50%;
 }
 
-/**  Grand hexagon **/
+.AutresDocs .hexagon span {
+    margin-left: 10px;
+}
+/**  Grand hexagon */
 
 .hexagon {
   position: relative;
-  width: 23px;
-  height: 13.28px;
+  width: 30px;
+  height: 17.32px;
+  background-color: #ffffff;
+  margin: 8.66px 0;
   border-left: solid 1px #e79655;
   border-right: solid 1px #e79655;
 }
 
 .hexagon:before,
 .hexagon:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  width: 21.21px;
+  height: 21.21px;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background-color: inherit;
+  left: 3.3934px;
+}
+
+.hexagon:before {
+  top: -10.6066px;
+  border-top: solid 1.4142px #e79655;
+  border-right: solid 1.4142px #e79655;
+}
+
+.hexagon:after {
+  bottom: -10.6066px;
+  border-bottom: solid 1.4142px #e79655;
+  border-left: solid 1.4142px #e79655;
+}
+
+/** Petit hexagon **/
+
+.hexagon-little {
+  position: relative;
+  width: 23px;
+  height: 13.28px;
+  background-color: #f8f8f8;
+  margin: 6.64px 0;
+  border-left: solid 1px #e79655;
+  border-right: solid 1px #e79655;
+}
+
+.hexagon-little:before,
+.hexagon-little:after {
   content: "";
   position: absolute;
   z-index: 1;
@@ -253,60 +305,18 @@ h2 {
   left: 2.3683px;
 }
 
-.hexagon:before {
+.hexagon-little:before {
   top: -8.1317px;
   border-top: solid 1.4142px #e79655;
   border-right: solid 1.4142px #e79655;
 }
 
-.hexagon:after {
+.hexagon-little:after {
   bottom: -8.1317px;
   border-bottom: solid 1.4142px #e79655;
   border-left: solid 1.4142px #e79655;
 }
 
-
-.box-check {
-  display: none
-}
-
-
-/** Petit hexagon **/
-
-.hexagon-little {
-  position: relative;
-  width: 16px;
-  height: 9.24px;
-  background-color: #f8f8f8;
-  border-left: solid 1px #e79655;
-  border-right: solid 1px #e79655;
-}
-
-.hexagon-little:before,
-.hexagon-little:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  width: 11.31px;
-  height: 11.31px;
-  -webkit-transform: scaleY(0.5774) rotate(-45deg);
-  -ms-transform: scaleY(0.5774) rotate(-45deg);
-  transform: scaleY(0.5774) rotate(-45deg);
-  background-color: inherit;
-  left: 1.3431px;
-}
-
-.hexagon-little:before {
-  top: -5.6569px;
-  border-top: solid 1.4142px #e79655;
-  border-right: solid 1.4142px #e79655;
-}
-
-.hexagon-little:after {
-  bottom: -5.6569px;
-  border-bottom: solid 1.4142px #e79655;
-  border-left: solid 1.4142px #e79655;
-}
 
 /* Mode responsive **/
 
