--- a/assets/scss/pages/document.scss
+++ b/assets/scss/pages/document.scss
@@ -60,22 +60,29 @@ h2 {
 
 
 .listeDownload li > .hexagon {
-  margin-left: 7px;
-  margin-top: -3px;
+  margin-left: 15px;
+  margin-right: -4px;
+  margin-top: -12px;
   float: right;
+}
+
+.listeDownload li > label svg {
+    margin-right: 40px;
+}
+
+.listeDownload li > .hexagon > svg {
+    margin-right: 40px;
 }
 
 .listeDownload li > .hexagon > .check {
   border: 1px solid red;
-/*  background: url(../../img/document/check.png) no-repeat;
-  background-size: 16px;
-  background-position: 50% 50%;*/
+
 }
 
 .listeDownload li {
   list-style: none;
   display: block;
-  padding: 16px;
+  padding: 20px;
   background-color: #fff;
   margin-bottom: 3px;
   font-weight: bold;
@@ -91,8 +98,6 @@ h2 {
   }
 }
 
-
-
 .btnSubmit .hexagon {
     display: inline-block;
     margin-right: 12px
@@ -106,8 +111,8 @@ h2 {
   display: block;
   position: relative;
   margin-top: 13px;
-  margin-bottom: -17px;
-  margin-right: -17px;
+  margin-bottom: -21px;
+  margin-right: -21px;
   background-color: #f8f8f8 }
 
 .deroulant .sous-menu li:after {
@@ -154,6 +159,19 @@ h2 {
   font-weight: lighter;
 }
 
+.Rapport button > span {
+  font-weight: lighter;
+}
+
+.Rapport button > span > svg {
+  float: left;
+  margin-left: -34px;
+  margin-top: 12px;
+}
+
+.Rapport button > span > svg.hexagon {
+  float: left;
+}
 /*** Publication */
 .Publication {
   clear: both;
@@ -213,7 +231,7 @@ h2 {
 .AutresDocs li {
   list-style: none;
   display: block;
-  padding: 16px;
+  padding: 20px;
   background-color: #fff;
   margin-bottom: 2px;
   font-weight: bold;
@@ -239,83 +257,9 @@ h2 {
 }
 
 .AutresDocs .hexagon span {
-    margin-left: 10px;
-}
-/**  Grand hexagon */
 
-.hexagon {
-  position: relative;
-  width: 30px;
-  height: 17.32px;
-  background-color: #ffffff;
-  margin: 8.66px 0;
-  border-left: solid 1px #e79655;
-  border-right: solid 1px #e79655;
 }
 
-.hexagon:before,
-.hexagon:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  width: 21.21px;
-  height: 21.21px;
-  -webkit-transform: scaleY(0.5774) rotate(-45deg);
-  -ms-transform: scaleY(0.5774) rotate(-45deg);
-  transform: scaleY(0.5774) rotate(-45deg);
-  background-color: inherit;
-  left: 3.3934px;
-}
-
-.hexagon:before {
-  top: -10.6066px;
-  border-top: solid 1.4142px #e79655;
-  border-right: solid 1.4142px #e79655;
-}
-
-.hexagon:after {
-  bottom: -10.6066px;
-  border-bottom: solid 1.4142px #e79655;
-  border-left: solid 1.4142px #e79655;
-}
-
-/** Petit hexagon **/
-
-.hexagon-little {
-  position: relative;
-  width: 23px;
-  height: 13.28px;
-  background-color: #f8f8f8;
-  margin: 6.64px 0;
-  border-left: solid 1px #e79655;
-  border-right: solid 1px #e79655;
-}
-
-.hexagon-little:before,
-.hexagon-little:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  width: 16.26px;
-  height: 16.26px;
-  -webkit-transform: scaleY(0.5774) rotate(-45deg);
-  -ms-transform: scaleY(0.5774) rotate(-45deg);
-  transform: scaleY(0.5774) rotate(-45deg);
-  background-color: inherit;
-  left: 2.3683px;
-}
-
-.hexagon-little:before {
-  top: -8.1317px;
-  border-top: solid 1.4142px #e79655;
-  border-right: solid 1.4142px #e79655;
-}
-
-.hexagon-little:after {
-  bottom: -8.1317px;
-  border-bottom: solid 1.4142px #e79655;
-  border-left: solid 1.4142px #e79655;
-}
 
 
 /* Mode responsive **/
