--- a/assets/css/pages/strategy.css
+++ b/assets/css/pages/strategy.css
@@ -4,25 +4,14 @@ html, body {
 main {
   max-width: 960px;
   margin: 0 auto; }
-  main section div {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    text-align: center; }
-    main section div figure {
-      line-height: 1.5em; }
-      main section div figure figcaption {
-        color: #636363; }
-  main section div.infos {
+  main .infos {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    flex-direction: row;
-    flex-wrap: wrap;
     cursor: pointer; }
-    main section div.infos p {
-      margin-left: 1em; }
-      main section div.infos p span {
+    main .infos p {
+      font-size: 16.5px; }
+      main .infos p span {
         color: #636363; }
 
 .title {
@@ -34,10 +23,85 @@ main {
   color: #292929;
   font-size: 15px;
   font-weight: bold;
-  border-bottom: 1px solid #5a8fa6; }
+  border-bottom: 1px solid #5a8fa6;
+  padding-bottom: 5px; }
 
-.hexagon.hexagon-pillier-1 {
-  background: #5a8fa6; }
+.svg-container {
+  display: flex;
+  position: relative;
+  justify-content: flex-end;
+  overflow: hidden; }
+
+.svg-container .arrow {
+  width: 8px;
+  height: 20px;
+  position: absolute;
+  left: 27.5%;
+  top: 25%; }
+
+.svg-container .percentage {
+  position: absolute;
+  left: 10%;
+  top: 25%; }
+
+.svg-container .percentage {
+  position: absolute;
+  left: 20%;
+  top: 25%; }
+
+.svg-container .euro {
+  position: absolute;
+  left: 25%;
+  top: 25%; }
+
+.svg-container .line {
+  position: absolute;
+  left: 20%;
+  top: 43%; }
+
+.svg-container .stat {
+  position: absolute;
+  left: 20%;
+  top: 30%; }
+
+.icon {
+  fill: #f8f8f8;
+  stroke: #5a8fa6;
+  stroke-width: 10; }
+
+.pillier svg, .priority svg {
+  width: 50%; }
+
+.priority .priority-1 {
+  fill: #98c67f; }
+
+.priority .priority-2 {
+  fill: #f0847a; }
+
+.priority .priority-3 {
+  fill: #fcc04b; }
+
+.polygone {
+  fill: #5a8fa6;
+  stroke: #fff;
+  stroke-width: 1px;
+  fill-rule: evenodd; }
+
+figure {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative; }
+
+figure figcaption {
+  position: absolute;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 50%;
+  line-height: 20px;
+  color: #fff;
+  font-size: 12px; }
 
 /**************************************************************************\
                   MEDIA QUERIES
@@ -46,31 +110,36 @@ main {
   .title {
     font-size: 20px; }
 
-  main section div {
-    display: flex;
+  main section {
     align-items: center;
     justify-content: space-around;
+    flex-direction: row;
     flex-wrap: wrap; }
-    main section div figure {
+    main section figure {
       margin: 0.5em;
       text-align: center;
       font-size: 10px;
       line-height: 1.3em; }
-  main section div.infos {
+  main .infos {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    flex-wrap: wrap; }
-    main section div.infos p {
-      font-size: 5px;
-      margin-left: 1em; }
-      main section div.infos p span {
-        color: #636363; } }
-.polygone {
-  fill: #5a8fa6;
-  stroke: #fff;
-  stroke-width: 1px;
-  fill-rule: evenodd; }
+    flex-wrap: wrap;
+    font-size: 16.5px; }
+    main .infos span {
+      color: #636363; }
+
+  .svg-container-pilliers {
+    justify-content: center; }
+
+  .svg-container-pilliers div {
+    width: 20px;
+    height: 100px;
+    margin: 3px; }
+
+  .svg-container-pilliers p {
+    color: #fff;
+    font-size: 10px; } }
 
 /*# sourceMappingURL=strategy.css.map */
