--- a/assets/scss/pages/document.scss
+++ b/assets/scss/pages/document.scss
@@ -240,7 +240,10 @@ h2 {
   font-weight: bold;
  }
 
-
+a {
+  color:black;
+  text-decoration: none;
+}
 .AutresDocs li > span,
 .AutresDocs li > a > span{
   font-size: 12px;
@@ -250,26 +253,32 @@ h2 {
 
 }
 
-.AutresDocs li > a > span{
+.AutresDocs li > a > span.fleche{
     margin-right: -33px;
 }
 
 .AutresDocs .hexagon{
-   background: url() no-repeat;
+
    margin-left: 12px;
-   background-size: 9px;
    background-position: 50% 50%;
+   float: right;
+   margin-top: -11px;
+   display: inline-block;
 }
-.AutresDocs .hexagon  {
-  float: right;
-  margin-top: -11px;
-  display: block;
-}
+
 .AutresDocs a > ul > li  > a > span.fleche {
   margin-left: 70px;
   margin-top: -33px;
   display: block;
 }
+
+
+.titreDoc{
+    display: block;
+    width: 70%;
+
+  }
+
 
 
 
@@ -279,13 +288,10 @@ h2 {
 
   /** RAPPORT PERSONNALISE **/
 
-  .listeDownload li {
-    padding: 30px;
-
-  }
 
   .listeDownload li > label {
-    display: block;
+    display: inline-block;
+    width: 70%;
   }
   .listeDownload li > label > svg.reduire {
       margin-right: 20px;
@@ -298,10 +304,12 @@ h2 {
 
   .listeDownload li >.hexagon{
     display: block;
-
-    margin-right: -2px;
+    margin-right: -17px;
   }
 
+  input {
+    display: none;
+  }
   .sous-menu {
     margin-top: 30px;
     margin-bottom: -31px;
@@ -329,14 +337,7 @@ h2 {
   }
 
   /*** AUTRES DOCS **/
-  .AutresDocs li {
-    padding: 30px;
-  }
 
-  .AutresDocs .hexagon{
-    display:block;
-
-  }
 
 }
 /*# sourceMappingURL=document.css.map */
