--- a/assets/scss/pages/document.scss
+++ b/assets/scss/pages/document.scss
@@ -58,43 +58,45 @@ h2 {
 .Rapport p > span {
   font-weight: bold; }
 
+//
+// .listeDownload li > .hexagon {
+//   margin-left: 15px;
+//   margin-right: -4px;
+//   margin-top: -12px;
+//   float: right;
+// }
 
-.listeDownload li > .hexagon {
-  margin-left: 15px;
-  margin-right: -4px;
-  margin-top: -12px;
-  float: right;
+.listeDownload li  label {
+  width: 70%;
+  position: absolute;
+  float: left;
 }
-.listeDownload li > label {
 
-}
-.listeDownload li > label svg.reduire {
+.listeDownload li  label > svg.reduire {
     margin-right: 40px;
-}
-
-
-.listeDownload li > .hexagon > .check {
-  margin-top: 12px;
-
 }
 
 .listeDownload li {
   list-style: none;
   display: block;
-  padding: 20px;
+  padding: 6px;
   background-color: #fff;
   margin-bottom: 3px;
   font-weight: bold;
 
-  > span,
-  > input {
-      float: right;
-  }
-
-  > span {
+  .taille {
+    float: right;
+    margin-top: 2px;
     font-size: 12px;
     line-height: 1.2;
   }
+
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
 }
 .Rapport button {
   color: #e79655;
@@ -126,8 +128,7 @@ h2 {
 
 
 .Rapport button > span > svg{
-  margin-left: 12px;
-  margin-left: -47px;
+  margin-left: -51px;
 }
 
 
@@ -138,10 +139,11 @@ h2 {
 .sous-menu {
   display: block;
   position: relative;
-  margin-top: 13px;
-  margin-bottom: -21px;
-  margin-right: -21px;
-  background-color: #f8f8f8 }
+  margin-top: 63px;
+  margin-bottom: -12px;
+  margin-right: -7px;
+  margin-right: -7px;
+  background-color: #f8f8f8;}
 
 .deroulant .sous-menu li:after {
   content: ""; }
@@ -150,6 +152,13 @@ h2 {
   display: block;
   margin-bottom: 1px;
   background-color: #f8f8f8; }
+
+.sous-menu li  label {
+    margin-left: 51px;
+    width: 70%;
+    position: absolute;
+    float: left;
+  }
 
 .deroulant .sous-menu li > a {
   color: white; }
@@ -167,6 +176,69 @@ h2 {
     content: "";
     display: table;
   }
+}
+
+
+.boutonSVG1 {
+  right: 10px;
+  margin-left: 20px;
+  margin-top: 9px;
+  transform: translateY(-50%);
+  width: 33px;
+  float: right;
+
+
+  .check {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate( -50%, -50% );
+  }
+
+  input {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate( -50%, -50% );
+  }
+
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+}
+
+.boutonSVG1-little {
+  margin-left: 20px;
+  margin-top: 9px;
+  transform: translateY(-50%);
+  float: right;
+  width: 27px;
+
+  .check {
+    left: 40%;
+    position: absolute;
+    top: 40%;
+    transform: translate(-50%, -50%);
+  }
+
+
+
+  input {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate( -50%, -50% );
+  }
+
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
 }
 
 
@@ -234,54 +306,55 @@ h2 {
 .AutresDocs li {
   list-style: none;
   display: block;
-  padding: 20px;
+  padding: 10px;
   background-color: #fff;
   margin-bottom: 2px;
   font-weight: bold;
+  position: relative;
+
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
  }
+
 
 a {
   color:black;
   text-decoration: none;
 }
-.AutresDocs li > span,
-.AutresDocs li > a > span{
-  font-size: 12px;
-  line-height: 1.2;
-  float: right;
-  margin-right: 12px;
-
+.AutresDocs li .taille{
+    font-size: 12px;
+      line-height: 1.2;
+      float: right;
+      margin-top: 16px;
+      margin-right: 62px;
 }
-
-.AutresDocs li > a > span.fleche{
-    margin-right: -33px;
-}
-
-.AutresDocs .hexagon{
-
-   margin-left: 12px;
-   background-position: 50% 50%;
-   float: right;
-   margin-top: -11px;
-   display: inline-block;
-}
-
-.AutresDocs a > ul > li  > a > span.fleche {
-  margin-left: 70px;
-  margin-top: -33px;
-  display: block;
-}
-
 
 .titreDoc{
-    display: block;
+    display: inline-block;
     width: 70%;
+    float: left;
 
   }
 
+.boutonSVG2 {
+  height: 40px;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 33px;
 
+  .fleche {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate( -50%, -50% );
+  }
 
-
+}
 
 /* Mode responsive*/
 @media screen and (max-width : 580px) {
@@ -289,9 +362,9 @@ a {
   /** RAPPORT PERSONNALISE **/
 
 
-  .listeDownload li > label {
+  .listeDownload li  label {
     display: inline-block;
-    width: 70%;
+    width: 50%;
   }
   .listeDownload li > label > svg.reduire {
       margin-right: 20px;
@@ -311,10 +384,23 @@ a {
     display: none;
   }
   .sous-menu {
-    margin-top: 30px;
+    margin-top: 60px;
     margin-bottom: -31px;
-    margin-right: -31px;
+    margin-right: -7px;
   }
+
+  .boutonSVG1-little {
+    width: 26px;
+
+    .check {
+      left: 40%;
+      position: absolute;
+      top: 40%;
+      transform: translate(-50%, -50%);
+    }
+
+  }
+
   /** PUBLICATION **/
   .Publication li {
     display: block;
@@ -337,7 +423,9 @@ a {
   }
 
   /*** AUTRES DOCS **/
-
+  .AutresDocs li .taille {
+    float: none;
+  }
 
 }
 /*# sourceMappingURL=document.css.map */
