--- a/assets/scss/pages/strategy.scss
+++ b/assets/scss/pages/strategy.scss
@@ -345,12 +345,29 @@ figure figcaption {
   span {
     color: #000;
     position: absolute;
-    top: 55px;
+    top: 70px;
     left: 0;
     font-size: 15px;
   }
 }
 
+.objectif-2 li:first-child {
+  h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 0;
+    font-size: 15px;
+  }
+
+  span {
+    color: #000;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    font-size: 15px;
+  }
+}
 .objectif-2 li:nth-child(2) {
   width: 55px;
   height: 55px;
@@ -388,7 +405,7 @@ figure figcaption {
   span {
     color: #000;
     position: absolute;
-    top: 65px;
+    top: 80px;
     left: 5px;
     font-size: 15px;
   }
@@ -425,7 +442,7 @@ figure figcaption {
   span {
     color: #000;
     position: absolute;
-    top: 75px;
+    top: 90px;
     left: 10px;
     font-size: 15px;
   }
@@ -463,7 +480,7 @@ figure figcaption {
   span {
     color: #000;
     position: absolute;
-    top: 95px;
+    top: 110px;
     left: 25px;
     font-size: 15px;
   }
@@ -514,7 +531,7 @@ figure figcaption {
   span {
     color: #000;
     position: absolute;
-    top: 55px;
+    top: 65px;
     left: 0;
     font-size: 15px;
   }
@@ -524,6 +541,22 @@ figure figcaption {
   width: 35px;
   height: 35px;
   top: 10px;
+
+  h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 0;
+    font-size: 15px;
+  }
+
+  span {
+    color: #000;
+    position: absolute;
+    top: 55px;
+    left: 0;
+    font-size: 15px;
+  }
 }
 
 .objectif-3 li:nth-child(2)::before {
@@ -557,7 +590,7 @@ figure figcaption {
   span {
     color: #000;
     position: absolute;
-    top: 65px;
+    top: 90px;
     left: 5px;
     font-size: 15px;
   }
@@ -594,7 +627,7 @@ figure figcaption {
   span {
     color: #000;
     position: absolute;
-    top: 75px;
+    top: 100px;
     left: 10px;
     font-size: 15px;
   }
@@ -632,7 +665,7 @@ figure figcaption {
   span {
     color: #000;
     position: absolute;
-    top: 95px;
+    top: 110px;
     left: 25px;
     font-size: 15px;
   }
