--- a/assets/scss/pages/document.scss
+++ b/assets/scss/pages/document.scss
@@ -264,7 +264,7 @@ h2 {
 .Publication h4 {
   font-weight: bold;
   color: #e79655;
-  margin-bottom: 7px;}
+  margin-bottom: 40px;}
 
 .Publication li > span {
   font-size: 12px;
@@ -287,10 +287,26 @@ h2 {
   margin-left: 12px;
 }
 
-.Publication  li > div.descriptionIMG > a > span {
-  margin-left: 23px;
+.Publication  li > div.descriptionIMG > a .taille {
+  margin-left: -1px;
   margin-top: -33px;
   display: block;
+}
+
+.btnSVG {
+  transform: translateY(-50%);
+  width: 33px;
+  display: block;
+  margin-top: 24px;
+  margin-left: 12px;
+
+  .fleche {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate( -50%, -50% );
+  }
+
 }
 
 /** AutresDocs */
@@ -418,8 +434,8 @@ a {
     margin-top: -73px;
 
   }
-  .Publication .download > .hexagon {
-      margin-left: 26px;
+  .Publication .download > .btnSVG {
+      margin-left: 84px;
   }
 
   /*** AUTRES DOCS **/
